Text area overlapping header is fixed

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -14,7 +14,6 @@
 
 #tweet-text {
   width: 100%;
-  position: relative;
   font-family: sans-serif;
   border-bottom: 8px solid brown;
   outline: none;
